--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-14  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Kamil Paral
+	(bug #551977).
+
 2008-09-14  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
