--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-14  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-09-14  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Kamil Paral
