--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-14  Robert-André Mauchin  <zebob.m@pengzone.org>
+
+	* af.po: Updated Afrikaans translation by Friedel Wolff.
+
 2008-09-14  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
