--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-14  Praveen Arimbrathodiyil <pravi.a@gmail.com>
+
+	* ml.po: Malayalam translation updated.
+
 2008-09-14  Robert-André Mauchin  <zebob.m@pengzone.org>
 
 	* af.po: Updated Afrikaans translation by Friedel Wolff.
