--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-15  I. Felix <ifelix@redhat.com>
+
+	* ta.po:  Tamil Translation error corrected.
+
 2008-09-14  Praveen Arimbrathodiyil <pravi.a@gmail.com>
 
 	* ml.po: Malayalam translation updated.
