--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-15  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Anas Afif Emad.
+
 2008-09-15  I. Felix <ifelix@redhat.com>
 
 	* ta.po:  Tamil Translation error corrected.
