--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-15  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2008-09-15  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Anas Afif Emad.
