Center autorun dialog on screen.
2008-09-16  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-autorun.c
	(do_autorun_for_content_type):
	Center autorun dialog on screen.

svn path=/trunk/; revision=14630

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-16  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-autorun.c
+	(do_autorun_for_content_type):
+	Center autorun dialog on screen.
+
 2008-09-13  Christian Neumair  <cneumair@gnome.org>
 
 	* src/file-manager/fm-properties-window.c (file_has_prefix),
