--- a/po/ar.po
+++ b/po/ar.po
@@ -1480,9 +1480,9 @@ msgstr[5] "تبقى %I'd مجلد للحذف"
 #: ../libnautilus-private/nautilus-file-operations.c:1339
 msgid "%'d file left to delete — %T left"
 msgid_plural "%'d files left to delete — %T left"
-msgstr[0] "لا تتبقى ملفات للحذف — باق %2$T"
-msgstr[1] "بقى ملف واحد للحذف — باق %2$T"
-msgstr[2] "بقى ملفين للحذف — باق %2$T"
+msgstr[0] "لم تتبقى ملفات للحذف %.0s— باق %T"
+msgstr[1] "بقى ملف واحد للحذف %.0s— باق %T"
+msgstr[2] "بقى ملفين للحذف %.0s— باق %T"
 msgstr[3] "بقى %I'd ملفات للحذف — باق %T"
 msgstr[4] "بقى %I'd ملفا للحذف — باق %T"
 msgstr[5] "بقى %I'd ملف للحذف — باق %T"
@@ -1581,8 +1581,8 @@ msgstr "تعذّر وصْل %s"
 msgid "Preparing to copy %'d file (%S)"
 msgid_plural "Preparing to copy %'d files (%S)"
 msgstr[0] "يجري التحضير لنسخ %I'd ملف (%S)"
-msgstr[1] "يجري التحضير لنسخ ملف واحد (%I'd) (%S)"
-msgstr[2] "يجري التحضير لنسخ ملفين (%I'd) (%S)"
+msgstr[1] "يجري التحضير لنسخ ملف واحد %.0s (%S)"
+msgstr[2] "يجري التحضير لنسخ ملفين %.0s (%S)"
 msgstr[3] "يجري التحضير لنسخ %I'd ملفات (%S)"
 msgstr[4] "يجري التحضير لنسخ %I'd ملفا (%S)"
 msgstr[5] "يجري التحضير لنسخ %I'd ملف (%S)"
@@ -1592,8 +1592,8 @@ msgstr[5] "يجري التحضير لنسخ %I'd ملف (%S)"
 msgid "Preparing to move %'d file (%S)"
 msgid_plural "Preparing to move %'d files (%S)"
 msgstr[0] "يجري التحضير لنقل %I'd ملف (%S)"
-msgstr[1] "يجري التحضير لنقل ملف واحد (%I'd) (%S)"
-msgstr[2] "يجري التحضير لنقل ملفين (%I'd) (%S)"
+msgstr[1] "يجري التحضير لنقل ملف واحد %.0s (%S)"
+msgstr[2] "يجري التحضير لنقل ملفين %.0s (%S)"
 msgstr[3] "يجري التحضير لنقل %I'd ملفات (%S)"
 msgstr[4] "يجري التحضير لنقل %I'd ملفا (%S)"
 msgstr[5] "يجري التحضير لنقل %I'd ملف (%S)"
@@ -1603,8 +1603,8 @@ msgstr[5] "يجري التحضير لنقل %I'd ملف (%S)"
 msgid "Preparing to delete %'d file (%S)"
 msgid_plural "Preparing to delete %'d files (%S)"
 msgstr[0] "يجري التحضير لحذف %I'd ملف (%S)"
-msgstr[1] "يجري التحضير لحذف ملف واحد (%I'd) (%S)"
-msgstr[2] "يجري التحضير لحذف ملفين (%I'd) (%S)"
+msgstr[1] "يجري التحضير لحذف ملف واحد %.0s (%S)"
+msgstr[2] "يجري التحضير لحذف ملفين %.0s (%S)"
 msgstr[3] "يجري التحضير لحذف %I'd ملفات (%S)"
 msgstr[4] "يجري التحضير لحذف %I'd ملفا (%S)"
 msgstr[5] "يجري التحضير لحذف %I'd ملف (%S)"
@@ -1701,8 +1701,8 @@ msgstr "يجري مضاعفة \"%B\""
 msgid "Moving %'d file (in \"%B\") to \"%B\""
 msgid_plural "Moving %'d files (in \"%B\") to \"%B\""
 msgstr[0] "يجري نقل %I'd ملف (في \"%B\") إلى \"%B\""
-msgstr[1] "يجري نقل ملف واحد (في \"%2$B\") إلى \"%3$B\""
-msgstr[2] "يجري نقل ملفين (في \"%2$B\") إلى \"%3$B\""
+msgstr[1] "يجري نقل ملف واحد %.0s (في \"%B\") إلى \"%B\""
+msgstr[2] "يجري نقل ملفين %.0s (في \"%B\") إلى \"%B\""
 msgstr[3] "يجري نقل %I'd ملفات (في \"%B\") إلى \"%B\""
 msgstr[4] "يجري نقل %I'd ملفا (في \"%B\") إلى \"%B\""
 msgstr[5] "يجري نقل %I'd ملف (في \"%B\") إلى \"%B\""
@@ -1711,8 +1711,8 @@ msgstr[5] "يجري نقل %I'd ملف (في \"%B\") إلى \"%B\""
 msgid "Copying %'d file (in \"%B\") to \"%B\""
 msgid_plural "Copying %'d files (in \"%B\") to \"%B\""
 msgstr[0] "يجري نسخ %I'd ملف (في \"%B\") إلى \"%B\""
-msgstr[1] "يجري نسخ ملف واحد (في \"%2$B\") إلى \"%3$B\""
-msgstr[2] "يجري نسخ ملفين (في \"%2$B\") إلى \"%3$B\""
+msgstr[1] "يجري نسخ ملف واحد %.0s (في \"%B\") إلى \"%B\""
+msgstr[2] "يجري نسخ ملفين %.0s (في \"%B\") إلى \"%B\""
 msgstr[3] "يجري نسخ %I'd ملفات (في \"%B\") إلى \"%B\""
 msgstr[4] "يجري نسخ %I'd ملفا (في \"%B\") إلى \"%B\""
 msgstr[5] "يجري نسخ %I'd ملف (في \"%B\") إلى \"%B\"            "
@@ -1721,8 +1721,8 @@ msgstr[5] "يجري نسخ %I'd ملف (في \"%B\") إلى \"%B\"            "
 msgid "Duplicating %'d file (in \"%B\")"
 msgid_plural "Duplicating %'d files (in \"%B\")"
 msgstr[0] "يجري مضاعفة %I'd ملف (في \"%B\")"
-msgstr[1] "يجري مضاعفة ملف واحد (في \"%2$B\")"
-msgstr[2] "يجري مضاعفة ملفين (في \"%2$B\")"
+msgstr[1] "يجري مضاعفة ملف واحد %.0s (في \"%B\")"
+msgstr[2] "يجري مضاعفة ملفين %.0s (في \"%B\")"
 msgstr[3] "يجري مضاعفة %I'd ملفات (في \"%B\")"
 msgstr[4] "يجري مضاعفة %I'd ملفا (في \"%B\")"
 msgstr[5] "يجري مضاعفة %I'd ملف (في \"%B\")"
@@ -1731,8 +1731,8 @@ msgstr[5] "يجري مضاعفة %I'd ملف (في \"%B\")"
 msgid "Moving %'d file to \"%B\""
 msgid_plural "Moving %'d files to \"%B\""
 msgstr[0] "يجري نقل %I'd ملف إلى \"%B\" "
-msgstr[1] "يجري نقل ملف واحد إلى \"%2$B\" "
-msgstr[2] "يجري نقل ملفين إلى \"%2$B\" "
+msgstr[1] "يجري نقل ملف واحد %.0s إلى \"%B\""
+msgstr[2] "يجري نقل ملفين %.0s إلى \"%B\""
 msgstr[3] "يجري نقل %I'd ملفات  إلى \"%B\" "
 msgstr[4] "يجري نقل %I'd ملفا إلى \"%B\" "
 msgstr[5] "يجري نقل %I'd ملف إلى \"%B\" "
@@ -1741,11 +1741,11 @@ msgstr[5] "يجري نقل %I'd ملف إلى \"%B\" "
 msgid "Copying %'d file to \"%B\""
 msgid_plural "Copying %'d files to \"%B\""
 msgstr[0] "يجري نسخ %I'd ملف إلى \"%B\" "
-msgstr[1] "يجري نسخ ملف واحد إلى \"%2$B\" "
-msgstr[2] "يجري نسخ ملفين إلى \"%2$B\" "
-msgstr[3] "يجري نسخ %I'd ملفات إلى \"%B\" "
-msgstr[4] "يجري نسخ %I'd ملفا إلى \"%B\" "
-msgstr[5] "يجر نسخ %I'd ملف إلى \"%B\" "
+msgstr[1] "يجري نسخ ملف واحد %.0s إلى \"%B\""
+msgstr[2] "يجري نسخ ملفين %.0s إلى \"%B\""
+msgstr[3] "يجري نسخ %I'd ملفات إلى \"%B\""
+msgstr[4] "يجري نسخ %I'd ملفا إلى \"%B\""
+msgstr[5] "يجر نسخ %I'd ملف إلى \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2785
 #, c-format
@@ -4302,9 +4302,9 @@ msgstr "غير مقروء"
 #, c-format
 msgid "%'d item, with size %s"
 msgid_plural "%'d items, totalling %s"
-msgstr[0] "لا عناصر (%I'd)، بحجم %s"
-msgstr[1] "عنصرٌ واحد (%I'd)، بحجم %s"
-msgstr[2] "عنصرين (%I'd)، بحجم %s"
+msgstr[0] "لا عناصر %.0s، بحجم %s"
+msgstr[1] "عنصرٌ واحد %.0s، بحجم %s"
+msgstr[2] "عنصرين %.0s، بحجم %s"
 msgstr[3] "%I'd عناصر، بحجم %s"
 msgstr[4] "%I'd عنصرًا، بحجم %s"
 msgstr[5] "%I'd عنصر، بحجم %s"
