Updated Greek Translation by Athanasios Lefteris <alefteris@gmail.com>
svn path=/trunk/; revision=14638

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-18 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation by Athanasios Lefteris <alefteris@gmail.com>
+
 2008-09-18  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
