--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-19  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2008-09-18 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation by Athanasios Lefteris <alefteris@gmail.com>
