Updated Brazilian Portuguese translation.
svn path=/trunk/; revision=14641

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-09 16:08-0400\n"
+"POT-Creation-Date: 2008-09-09 20:10+0000\n"
 "PO-Revision-Date: 2008-09-02 16:43-0400\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
@@ -314,7 +314,7 @@ msgid ""
 "\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and "
 "\"mime_type\"."
 msgstr ""
-"Uma lista de legendas abaixo de um ícone na visão de ícones e na área de "
+"Uma lista de legendas abaixo de um ícone na visão em ícones e na área de "
 "trabalho. O número de legendas mostradas depende do nível de zoom. Valores "
 "possíveis são: \"size\" (tamanho), \"type\" (tipo), \"date_modified\" (data "
 "da última modificação), \"date_changed\" (data da última alteração), "
@@ -442,11 +442,11 @@ msgstr "Tamanho padrão de ícone de miniatura"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:22
 msgid "Default column order in the list view"
-msgstr "Ordem padrão das colunas na visão de lista"
+msgstr "Ordem padrão das colunas na visão em lista"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:23
 msgid "Default column order in the list view."
-msgstr "Ordem padrão das colunas na visão de lista."
+msgstr "Ordem padrão das colunas na visão em lista."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:24
 msgid "Default compact view zoom level"
@@ -462,11 +462,11 @@ msgstr "Nível padrão de zoom para ícones"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:27
 msgid "Default list of columns visible in the list view"
-msgstr "Lista padrão de colunas visíveis na visão de lista"
+msgstr "Lista padrão de colunas visíveis na visão em lista"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:28
 msgid "Default list of columns visible in the list view."
-msgstr "Lista padrão de colunas visíveis na visão de lista."
+msgstr "Lista padrão de colunas visíveis na visão em lista."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid "Default list zoom level"
@@ -482,11 +482,11 @@ msgstr "Nível padrão de zoom usado pela visão compacta."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:32
 msgid "Default zoom level used by the icon view."
-msgstr "Nível de zoom padrão usado pela visão de ícones."
+msgstr "Nível de zoom padrão usado pela visão em ícones."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:33
 msgid "Default zoom level used by the list view."
-msgstr "Nível de zoom padrão usado pela visão de lista."
+msgstr "Nível de zoom padrão usado pela visão em lista."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:34
 msgid "Desktop computer icon name"
@@ -602,7 +602,7 @@ msgid ""
 "icon and list views."
 msgstr ""
 "Se verdadeiro, o Nautilus mostrará as pastas antes dos arquivos nas visões "
-"de ícones e lista."
+"em ícones e lista."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
@@ -1004,14 +1004,14 @@ msgstr "Limite de omissão do texto"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "The default size of an icon for a thumbnail in the icon view."
-msgstr "O tamanho padrão de um ícone para uma miniatura na visão de ícone."
+msgstr "O tamanho padrão de um ícone para uma miniatura na visão em ícones."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid ""
 "The default sort-order for items in the icon view. Possible values are \"name"
 "\", \"size\", \"type\", \"modification_date\", and \"emblems\"."
 msgstr ""
-"A ordenação padrão para itens na visão de ícones. Valores possíveis são "
+"A ordenação padrão para itens na visão em ícones. Valores possíveis são "
 "\"name\", \"size\", \"type\", \"modification_date\" e \"emblems\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:113
@@ -1019,7 +1019,7 @@ msgid ""
 "The default sort-order for the items in the list view. Possible values are "
 "\"name\", \"size\", \"type\", and \"modification_date\"."
 msgstr ""
-"A ordenação padrão para itens na visão de lista. Valores possíveis são \"name"
+"A ordenação padrão para itens na visão em lista. Valores possíveis são \"name"
 "\", \"size\", \"type\" e \"modification_date\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:114
@@ -2672,7 +2672,7 @@ msgstr ""
 #: ../src/file-manager/fm-icon-container.c:582
 #: ../src/file-manager/fm-icon-view.c:3006
 msgid "Icon View"
-msgstr "Visão de ícones"
+msgstr "Visão em ícones"
 
 #. translators: this is used in the view selection dropdown
 #. * of navigation windows and in the preferences dialog
@@ -2687,7 +2687,7 @@ msgstr "Visão compacta"
 #: ../src/file-manager/fm-list-view.c:1516
 #: ../src/file-manager/fm-list-view.c:2932
 msgid "List View"
-msgstr "Visão de lista"
+msgstr "Visão em lista"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:146
 msgid "Manually"
@@ -4452,15 +4452,15 @@ msgstr "Íc_ones"
 
 #: ../src/file-manager/fm-icon-view.c:3009
 msgid "The icon view encountered an error."
-msgstr "A visão de ícones encontrou um erro."
+msgstr "A visão em ícones encontrou um erro."
 
 #: ../src/file-manager/fm-icon-view.c:3010
 msgid "The icon view encountered an error while starting up."
-msgstr "A visão de ícones encontrou um erro ao iniciar."
+msgstr "A visão em ícones encontrou um erro ao iniciar."
 
 #: ../src/file-manager/fm-icon-view.c:3011
 msgid "Display this location with the icon view."
-msgstr "Exibir esta localização com a visão de ícones."
+msgstr "Exibir esta localização com a visão em ícones."
 
 #. translators: this is used in the view menu
 #: ../src/file-manager/fm-icon-view.c:3022
@@ -4516,15 +4516,15 @@ msgstr "_Lista"
 
 #: ../src/file-manager/fm-list-view.c:2935
 msgid "The list view encountered an error."
-msgstr "A visão de lista encontrou um erro."
+msgstr "A visão em lista encontrou um erro."
 
 #: ../src/file-manager/fm-list-view.c:2936
 msgid "The list view encountered an error while starting up."
-msgstr "A visão de lista encontrou um erro ao iniciar."
+msgstr "A visão em lista encontrou um erro ao iniciar."
 
 #: ../src/file-manager/fm-list-view.c:2937
 msgid "Display this location with the list view."
-msgstr "Exibir esta localização com a visão de lista."
+msgstr "Exibir esta localização com a visão em lista."
 
 #: ../src/file-manager/fm-properties-window.c:511
 msgid "You cannot assign more than one custom icon at a time!"
@@ -5331,7 +5331,7 @@ msgstr "<b>Legendas dos ícones</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:24
 msgid "<b>Icon View Defaults</b>"
-msgstr "<b>Padrões da visão de ícones</b>"
+msgstr "<b>Padrões da visão em ícones</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:25
 msgid "<b>List Columns</b>"
@@ -5339,7 +5339,7 @@ msgstr "<b>Colunas da lista</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:26
 msgid "<b>List View Defaults</b>"
-msgstr "<b>Padrões da visão de lista</b>"
+msgstr "<b>Padrões da visão em lista</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:27
 msgid "<b>Media Handling</b>"
@@ -5367,7 +5367,7 @@ msgstr "<b>Lixeira</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:33
 msgid "<b>Tree View Defaults</b>"
-msgstr "<b>Padrões da visão de árvore</b>"
+msgstr "<b>Padrões da visão em árvore</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:34
 msgid "A_ll columns have the same width"
@@ -5431,7 +5431,7 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid "Choose the order of information to appear in the list view."
-msgstr "Escolha a ordem em que as informações aparecerão na visão de lista."
+msgstr "Escolha a ordem em que as informações aparecerão na visão em lista."
 
 #: ../src/nautilus-file-management-properties.glade.h:51
 msgid ""
@@ -5469,8 +5469,8 @@ msgid ""
 "List View\n"
 "Compact View"
 msgstr ""
-"Visão de ícones\n"
-"Visão de lista\n"
+"Visão em ícones\n"
+"Visão em lista\n"
 "Visão compacta"
 
 #: ../src/nautilus-file-management-properties.glade.h:61
