--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-19 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo.
+
 2008-09-19  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
