--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-20 Goran Rakić <grakic@devbase.net>
+
+	* sr.po, sr@latin.po: Updated Serbian translation (by Miloš Popović).
+
 2008-09-19 Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo.
