--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-20  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-09-20 Goran Rakić <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian translation (by Miloš Popović).
