--- a/po/et.po
+++ b/po/et.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-01 10:58+0000\n"
-"PO-Revision-Date: 2008-09-01 19:12+0300\n"
+"PO-Revision-Date: 2008-09-20 08:46+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -341,6 +341,20 @@ msgid ""
 "smallest (33%), smaller (50%), small (66%), standard (100%), large (150%), "
 "larger (200%), largest (400%)"
 msgstr ""
+"Selle stringiga määratakse, kuidas liigpikkade failinimede osasid tuleb "
+"sõltuvalt suurendusastmest ellipsitega asendada. Iga loetelu kirje on kujul "
+"\"Suurendusaste:Täisarv\". Igale nullist suurema arvuga suurendusastme "
+"korral ei ületa failinimi määratud arvu ridu. Kui arv on null või väiksem, "
+"siis määratud suurendusastmele piiranguid ei rakendata. Lubatud on ka "
+"vaikimisi täisarvuline kirje ilma määratud suurendusastmeta, see kirjeldab "
+"suurima ridade arvu kõikidele suurendusastmetele. Näited: 0 - liiga pikkasid "
+"failinimesid kuvatakse alati; 3 - failinimesid lühendatakse, kui need "
+"ületavad kolme rida; smallest:5,smaller:4,0 - failinimesid lühendatakse "
+"suurendusastme \"smallest\" korral, kui need ületavad viite rida. "
+"Suurendusastme \"smaller\" korral lühendatakse failinimesid, kui need "
+"ületavad nelja rida. Ülejäänud suurendusastmete korral failinimesid ei "
+"lühendata. Saadaolevad suurendusastmed: väikseim (33%), väiksem (50%), väike "
+"(66%), tavalie (100%), suur (150%), suurem (200%), suurim (400%)"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:6
 msgid "All columns have same width"
@@ -357,6 +371,10 @@ msgid ""
 "not exceed the given number of lines. If the number is 0 or smaller, no "
 "limit is imposed on the number of displayed lines."
 msgstr ""
+"Number, mis määrab, kuidas töölaual olevate liigpikkade failinimede "
+"kuvamisel failinime osasid ellipsitega asendatakse. Kui number on nullist "
+"suurem, siis ei lasta failinimel ületada seda arvu ridu. Kui number on null "
+"või väiksem, siis failinime kuvamisel piirangut ei rakendata."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:9
 msgid ""
@@ -966,7 +984,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:110
 msgid "Text Ellipsis Limit"
-msgstr ""
+msgstr "Teksti ellipsite piirang"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "The default size of an icon for a thumbnail in the icon view."
@@ -6847,9 +6865,3 @@ msgstr "Suurendus"
 #: ../src/nautilus-zoom-control.c:896
 msgid "Set the zoom level of the current view"
 msgstr "Praeguse vaate suurendusastme seadmine"
-
-#~ msgid "Create Folder"
-#~ msgstr "Loo kataloog"
-
-#~ msgid "Move to Trash"
-#~ msgstr "Viska prügikasti"
