--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-22  Goran Rakić  <grakic@devbase.net>
+
+	* sr.po, sr@latin.po: Updated Serbian Translation (by Miloš Popović).
+
 2008-09-22  Mugurel Tudor  <mugurelu@gnome.ro>
 
 	* ro.po: Updated Romanian translation by
