Update for release.
2008-09-22  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14653

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-22  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-09-22  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-window-manage-views.c:
 	* src/nautilus-window-manage-views.h:
 	* src/nautilus-window.c (nautilus_window_destroy),
