--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.24.0 are:
+* Icon/compact view:
+   * Follow run-time changes to set of icon text attributes to be displayed
+   * Invalidate icon label when changing zoom level or “text besides icon”
+* List view:
+   * Properly offer textual drag target
+* Request centered autorun dialog
+* Always sort folders before files, even if sort criterion is reversed
+* Always assume that trash directories are local
+* Fix Small leaks and thinkos
+
 Major changes in 2.23.92 are:
 * Icon/compact view:
    * Allow to select range in addition to current selection, when pressing ctrl
