--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-22 Kenneth Nielsen <k.nielsen81@gmail.com>
+
+	* da.po: Updated Danish translation by Kenneth Nielsen
+
 2008-09-22  Goran Rakić  <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian Translation (by Miloš Popović).
