--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-22  Timo Jyrinki  <timo.jyrinki@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2008-09-22 Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
