--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-22  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-window-slot.c
+	(nautilus_window_slot_update_query_editor):
+	Add weak ref for query editor pointer.
+
+2008-09-22  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
