post-release bump to 2.24.1.
2008-09-22  Christian Neumair  <cneumair@gnome.org>

	* configure.in: post-release bump to 2.24.1.

=== nautilus 2.24.0 ===

svn path=/trunk/; revision=14659

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@
 
 2008-09-22  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in: post-release bump to 2.24.1.
+
+=== nautilus 2.24.0 ===
+
+2008-09-22  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
