--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-09-22  Nelson Benítez León  <nbenitez@svn.gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(copy_move_file)
+	(copy_move_directory)
+	(copy_files):
+	Pass G_FILE_COPY_TARGET_DEFAULT_PERMS flag to copy
+	operations when the source file is in a readonly
+	filesystem (eg. CDROM). Fixes #550816.
+
+	* configure.in: Bump required glib version to 2.19.0
+	to make use of aforementioned GFileCopyFlag.
+
 2008-09-22  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-file.c
