Updated Serbian translation
svn path=/trunk/; revision=14664

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-22  Goran Rakić  <grakic@devbase.net>
+
+	* sr.po, sr@latin.po: Updated Serbian Translation.
+
 2008-09-22  Timo Jyrinki  <timo.jyrinki@iki.fi>
 
 	* fi.po: Updated Finnish translation.
