--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -4072,7 +4072,7 @@ msgstr "Otvori ovu putanju u prikazu pomoću ikona."
 #. translators: this is used in the view menu
 #: ../src/file-manager/fm-icon-view.c:3022
 msgid "_Compact"
-msgstr "_Sažet"
+msgstr "_Zbijen"
 
 #: ../src/file-manager/fm-icon-view.c:3023
 msgid "The compact view encountered an error."
