--- a/po/sr.po
+++ b/po/sr.po
@@ -4072,7 +4072,7 @@ msgstr "Отвори ову путању у приказу помоћу икон
 #. translators: this is used in the view menu
 #: ../src/file-manager/fm-icon-view.c:3022
 msgid "_Compact"
-msgstr "_Сажет"
+msgstr "_Збијен"
 
 #: ../src/file-manager/fm-icon-view.c:3023
 msgid "The compact view encountered an error."
