2008-09-25 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/trunk/; revision=14665

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-25  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	* mk.po: Updated Macedonian translation.
+
 2008-09-22  Goran Rakić  <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian Translation.
